@@ -295,3 +295,10 @@ replication.limit=3
 #
 # status.mode=files
 
+
+# Determines if Swift remote wrappers will be executed by specifying an
+# absolute path, or a path relative to the job initial working directory
+#
+# valid values: absolute, relative
+# wrapper.invocation.mode=absolute
+
